Fixed the primary navigation not starting collapsed on mobile devices

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -242,3 +242,11 @@ footer{
   }
 }
 
+@media (min-width: 768px){
+   .main-navbar-collapse.collapse {
+      display: block !important;
+      height: auto !important;
+      padding-bottom: 0;
+      overflow: visible !important;
+   }
+}
